--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<spring.version>4.2.5.RELEASE</spring.version>
 		<freemarker.version>2.3.23</freemarker.version>
 		<gson.version>2.6.2</gson.version>
+		<junit.version>4.12</junit.version>
 	</properties>
 
 
@@ -239,6 +240,13 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>${gson.version}</version>
+		</dependency>
+		<!-- junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<modules>
