--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<hibernate.version>5.0.0.Final</hibernate.version>
+		<hibernate.version>4.3.9.Final</hibernate.version>
 		<spring.version>4.2.5.RELEASE</spring.version>
 		<freemarker.version>2.3.23</freemarker.version>
 		<gson.version>2.6.2</gson.version>
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>org.hibernate.common</groupId>
 			<artifactId>hibernate-commons-annotations</artifactId>
-			<version>${hibernate.version}</version>
+			<version>4.0.5.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
