--- a/cenozoic-web-front/src/main/webapp/WEB-INF/web.xml
+++ b/cenozoic-web-front/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:spring-jsp-config2.xml</param-value>
+			<param-value>classpath:application-config.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
@@ -15,6 +15,9 @@
 		<url-pattern>/*</url-pattern>
 		<!-- <url-pattern>/*</url-pattern> -->
 	</servlet-mapping>
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
